fix spacing on splash page

--- a/static/less/splash.less
+++ b/static/less/splash.less
@@ -12,6 +12,8 @@ div.splashBanner {
     padding-top: 2em;
     padding-bottom: 2em;
 
+    margin-bottom: 1em;
+
     background-color: @background-lighter;
     box-shadow: 0 3px 3px @gray;
 
@@ -41,13 +43,12 @@ div.splashBanner {
 div.banner {
     padding-top: 2em;
     padding-bottom: 2em;
-    margin-top: 1.5em;
-    margin-bottom: 1.5em;
+    margin-top: 1em;
+    margin-bottom: 1em;
 
     text-align: center;
 
-    border-top: 0.5em solid @background-light;
-    box-shadow: 0 3px 3px @background-light;
+    box-shadow: 0 3px 3px @gray;
 
     background-color: @background-light;
     background-size: cover;
